<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NerdeBulusalim</string>
    <string name="action_settings">Settings</string>
	 <string name="Search">Search</string>
	 <string name="Send">Send</string>
	 <string name="Exit">Exit</string>
	 <string name="Satallite">Satallite</string>
	 <string name="Traffic">Traffic</string>
	 <string name="Map">Map</string>
</resources>